--- a/randomsamples.Rmd
+++ b/randomsamples.Rmd
@@ -52,9 +52,9 @@ Se observa que la densidad condicional es simétrica para la configuración de v
 
 Utilizando el algoritmo de Metropolis Hastings con Caminata Aleatoria (MHCA), se genera una cadena de tamaño $N=10^4$ con precisión de 3 en la distribución instrumental, thin de 1 y burnin de 500. La gráfica de la densidad obtenida presenta un comportamiento similar al obtenido anteriormente.
 
-```{r warning=FALSE, echo=TRUE, results='hide'}
-test=Gen_FC_X1_X2(N=10^4, prop_prec=3, a=a1, b=b1, c=c1, d=d1, v=0.05, option = "all", thin=1, burnin=500)
-plot(density(test$thinned_chain),main="Densidad de distribución condicional X_1 dado X_2")
+```{r echo=TRUE, warning=FALSE, results='hide'}
+test=Gen_FC_X1_X2(N=10^5, prop_prec=3, a=a1, b=b1, c=c1, d=d1, v=0.05, option = "all", thin=25, burnin=5000,target_acceptance = 0.4)
+plot(density(test$thinned_chain),main="Densidad de distribución condicional X_1 dado X_2",xlab=expression(x[1]))
 ```
 
 ## Monitoreo de convergencia método de simulación
@@ -62,7 +62,7 @@ plot(density(test$thinned_chain),main="Densidad de distribución condicional X_1
 Para monitorear la convergencia de la cadena del algoritmo diseñado, se monitorea la tasa de aceptación y el tamaño de muestra efectivo para diferentes valores de la precisión (utilizada en la distribución instrumental) versus valores de $X_2=v$ .
 
 ```{r warning=FALSE, echo=TRUE, results='hide'}
-Mon_Measure(N=10^4, prop_prec_values=seq(1, 20, by = 1), a=a1, b=b1, c=c1, d=d1, v_values=seq(0.01, 0.24, length.out = 10),thin = 5,burnin = 500)
+Mon_Measure(N=10^4, prop_prec_values=seq(1, 20, by = 1), a=a1, b=b1, c=c1, d=d1, v_values=seq(0.01, 0.24, length.out = 10),thin = 5,burnin = 1000,target_acceptance = 0.4)
 ```
 
 El comportamiento ideal buscado es que la tasa de aceptación permanezca entre 0.2 y 0.7, mientras que el tamaño de muestra efectivo permanezca cercano al tamaño de muestra generado, para la configuración de las gráficas anteriores, el tamaño de muestra efectivo debería ser superior a 544 y cercanas a $(10^4 -500)/5=1900$. Los gráficos presentados permiten determinar el valor de la precisión según el valor de $X_2$.
@@ -70,7 +70,7 @@ El comportamiento ideal buscado es que la tasa de aceptación permanezca entre 0
 En la siguiente gráfica se presenta el comportamiento del indicador R-Hat (Gelman-Rubin), este se utiliza para compara la variabilidad entre varias cadenas con la variabilidad dentro de cada cadena. Un valor de R-Hat cercano a 1 indica que las cadenas han convergido a la misma distribución, lo que sugiere que las muestras generadas son representativas de la distribución. Si el valor de R-Hat es significativamente mayor que 1, se recomienda continuar la simulación para asegurar una mejor convergencia y obtener estimaciones más precisas.
 
 ```{r warning=FALSE, echo=TRUE, results='hide'}
-Mon_R_Hat(N=10^4, prop_prec_values=seq(1, 20, by = 1), a=a1, b=b1, c=c1, d=d1, v_values=seq(0.01, 0.24, length.out = 10),thin = 5,burnin = 500)
+Mon_R_Hat(N=10^4, prop_prec_values=seq(1, 20, by = 1), a=a1, b=b1, c=c1, d=d1, v_values=seq(0.01, 0.24, length.out = 10),thin = 2,burnin = 1000,target_acceptance = 0.4)
 ```
 
 ## Otra muestra aleatoria generada para la distribución condicional de $X_1$ dado $X_2$
@@ -78,7 +78,7 @@ Mon_R_Hat(N=10^4, prop_prec_values=seq(1, 20, by = 1), a=a1, b=b1, c=c1, d=d1, v
 Se genera otra muestra de tamaño $N=10^5$, utilizando $\phi=(2.2,2.2,2.2,2.2)$ con precisión 3, thin=50, burnin=5000, $X_2=v=0.1$ y tasa de aceptación objetivo target_acceptance=0.3, esta cantidad controla el aumento o disminución del valor de la precisión durante la simulación, es decir, el algoritmo se ajusta así mismo, lo cual permite disminuir rápidamente la autocorrelación de la cadena.
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-ExampleFC_X1_X2=Gen_FC_X1_X2(N=10^5, prop_prec = 3, a=a1, b=b1, c=c1, d=d1, v=0.1, option="all", thin = 50, burnin = 5000, X10_given = "random", target_acceptance = 0.3, dig_tol=15)
+ExampleFC_X1_X2=Gen_FC_X1_X2(N=10^5, prop_prec = 3, a=a1, b=b1, c=c1, d=d1, v=0.05, option="all", thin = 25, burnin = 5000, X10_given = "random", target_acceptance = 0.4, dig_tol=15)
 Graphs(as.data.frame(ExampleFC_X1_X2$thinned_chain), "X1", width = 40, lscatt = 0.3, uscatt = 0.3)
 ```
 
@@ -93,11 +93,11 @@ data.frame("Acceptance Rate"=ExampleFC_X1_X2$acc_rate,"Acceptance Rate Post Burn
 Las muestras simuladas anteriormente consideraron que la semilla era generada de forma aleatoria. Ahora consideramos nueve semillas establecidas por el usuario y monitoreamos la convergencia del promedio de cada cadena generada.
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-N=10^4;burnin=500;thin=50
+N=10^5;burnin=5000;thin=25; target_acceptance=0.4
 seedgiv=seq(0.1,0.9,0.1)
 ExampleFC_X1_X2_seedgiven=matrix(data=NA,nrow = length(seq((burnin+1), N, by = thin)),ncol=9, dimnames=list(list(),list("0.1","0.2","0.3","0.4","0.5","0.6","0.7","0.8","0.9")))
 for (i in 1:9) {
-  ExampleFC_X1_X2_seedgiven[,i]=Gen_FC_X1_X2(N=N, prop_prec = 4, a=a1, b=b1, c=c1, d=d1, v=0.05, option="all", thin = thin, burnin = burnin, X10_given = seedgiv[i], dig_tol = 10)$thinned_chain
+  ExampleFC_X1_X2_seedgiven[,i]=Gen_FC_X1_X2(N=N, prop_prec = 3, a=a1, b=b1, c=c1, d=d1, v=0.05, option="all", thin = thin, burnin = burnin, X10_given = seedgiv[i], dig_tol = 10,target_acceptance)$thinned_chain
 }
 ExampleFC_X1_X2_seedgiven=as.data.frame(ExampleFC_X1_X2_seedgiven)
 
@@ -119,6 +119,10 @@ Full_Grap_FC=ggplot(ExampleFC_X1_X2_seedgiven_cum,aes(x=Sim ,y=FCmu,group= Seed,
 grid.arrange(arrangeGrob(Piece1_Grap_FC, Piece2_Grap_FC, Full_Grap_FC,ncol=2, nrow=2, widths=c(2, 2), heights=c(2,2),layout_matrix=rbind(c(1,2),c(3,3))),bottom="Convergence control using averaging")
 ```
 
+```{r, echo=TRUE, warning=FALSE, results='hide'}
+round(apply(ExampleFC_X1_X2_seedgiven[1:3800,], 2, mean),3)
+```
+
 # Gibbs Sampling
 
 ## Muestras aleatorias para el vector $(X_1,X_2)$
@@ -128,8 +132,9 @@ grid.arrange(arrangeGrob(Piece1_Grap_FC, Piece2_Grap_FC, Full_Grap_FC,ncol=2, nr
 Se utiliza el algoritmo de Gibbs Sampling para generar una muestra aleatoria del vector $(X_1,X_2)$. Para el monitoreo de la convergencia de las cadenas generadas para $X_1$ y $X_2$ se presentan figuras que involucran la densidad e histograma, traza, promedio acumulado y autocorrelación.
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-N=10^4; burnin=1000;thin=10
-Example_Joint_Dist=Gen_Joint_Dist(N1 = N,N2 = 2,prop_prec = 3,a1,b1,c1,d1,thin = 2,X10_given = "random")
+N=10^5
+Example_Joint_Dist=Gen_Joint_Dist(N1 = N,N2 = 2,prop_prec = 3,a1,b1,c1,d1,thin = 2,X10_given = "random",target_acceptance = 0.4)
+burnin=5000;thin=25
 Graphs(as.data.frame(Example_Joint_Dist$X2[seq((burnin+1), N, by=thin)]),"X2",width = 40,uscatt = 0.06,lscatt = 0.05)
 ```
 
@@ -192,21 +197,44 @@ ggplot()+geom_contour(aes(dta$X1, dta$X2, z = dta$Z),bins = 50)+
 Se genera una muestra aleatoria de tamaño $N=10^5$ para el vector aleatorio $(X_1, X_2)$ con precisión 3, $\phi=(2.2,2.2,2.2,2.2)$, thin=1, y semilla aleatoria. Posteriormente se utiliza la función results_measure_diag para determinar los momentos numéricos, analíticos y la diferencia entre estos. En la implementación de esta función se utiliza un burnin=15000 y thin=7. Primero se presentan los resultados numéricos de las medidas.
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-Example_Joint_Dist=Gen_Joint_Dist(N1 = 10^5,N2 = 2,prop_prec=3,a = a1,b = b1,c = c1,d = d1,thin = 1, X10_given = "random")
+#Example_Joint_Dist=Gen_Joint_Dist(N1 = 10^5,N2 = 2,prop_prec=3,a = a1,b = b1,c = c1,d = d1,thin = 1, X10_given = "random")
 
-results_measure_diag=Measure_Diagnostic(data1 = Example_Joint_Dist$X1,data2 = Example_Joint_Dist$X2, var ="transform", digits = 4, a = a1, b = b1, c = c1, d = d1, burnin = 15000, thin = 10)
+results_measure_diag=Measure_Diagnostic(data1 = Example_Joint_Dist$X1,data2 = Example_Joint_Dist$X2, var ="transform", digits = 4, a = a1, b = b1, c = c1, d = d1, burnin = 5000, thin = 25)
 
-print(results_measure_diag$Numerical)
+print(round(results_measure_diag$Numerical,4))
 ```
 
 Los resultados analíticos fueron:
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-print(results_measure_diag$Analytical)
+print(round(results_measure_diag$Analytical,4))
 ```
 
 La diferencia entre las medidas descriptivas numéricas y las analíticas son las siguientes:
 
 ```{r, echo=TRUE, warning=FALSE, results='hide'}
-print(results_measure_diag$Differences)
+print(round(results_measure_diag$Differences,4))
+```
+
+# Comparación utilizando otra configuración de parámetros
+
+```{r, echo=TRUE, warning=FALSE, results='hide'}
+a1=3;b1=6;c1=3;d1=6
+Example_Joint_Dist1=Gen_Joint_Dist(N1 = 10^5,N2 = 2,prop_prec=4,a = a1,b = b1,c = c1,d = d1,thin = 1, X10_given = "random",target_acceptance = 0.4)
+
+results_measure_diag1=Measure_Diagnostic(data1 = Example_Joint_Dist1$X1,data2 = Example_Joint_Dist1$X2, var ="transform", digits = 4, a = a1, b = b1, c = c1, d = d1, burnin = 5000, thin = 25)
+
+results_measure_diag1$Numerical
+```
+
+Los resultados analíticos fueron:
+
+```{r}
+results_measure_diag1$Analytical
+```
+
+La diferencia entre las medidas descriptivas numéricas y las analíticas son las siguientes:
+
+```{r}
+results_measure_diag1$Differences
 ```
